@@ -1386,7 +1386,7 @@
                     prm = jQuery.when();
                 }
                 return prm.then(function() {
-                    group.add(record, this.new_model_position());
+                    group.add(record, this.new_position);
                     this.current_record = record;
                     if (previous_view.view_type == 'calendar') {
                         previous_view.set_default_date(record, selected_date);
@@ -1398,13 +1398,25 @@
                 }.bind(this));
             }.bind(this));
         },
-        new_model_position: function() {
-            var position = -1;
-            if (this.current_view && (this.current_view.view_type == 'tree') &&
-                    (this.current_view.attributes.editable == 'top')) {
-                position = 0;
+        get new_position() {
+            if (this.order) {
+                for (var j = 0; j < this.order.length; j++) {
+                    var oexpr = this.order[j][0],
+                        otype = this.order[j][1];
+                    if ((oexpr == 'id') && otype) {
+                        if (otype.startsWith('DESC')) {
+                            return 0;
+                        } else if (otype.startsWith('ASC')) {
+                            return -1;
+                        }
+                    }
+                }
             }
-            return position;
+            if (this.group.parent) {
+                return -1;
+            } else {
+                return 0;
+            }
         },
         set_on_write: function(name) {
             if(name) {
